Retrieve missing play_time; allow users to dl root cert.

--- a/html/tailwind_output.css
+++ b/html/tailwind_output.css
@@ -1064,6 +1064,11 @@ progress::-webkit-progress-value {
   margin-bottom: 0.625rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .-mt-\[7px\] {
   margin-top: -7px;
 }
@@ -1700,6 +1705,10 @@ progress::-webkit-progress-value {
   max-width: 100%;
 }
 
+.max-w-\[500px\] {
+  max-width: 500px;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1789,6 +1798,10 @@ progress::-webkit-progress-value {
 
 .list-none {
   list-style-type: none;
+}
+
+.list-decimal {
+  list-style-type: decimal;
 }
 
 .grid-cols-1 {
@@ -2309,6 +2322,10 @@ progress::-webkit-progress-value {
   padding: 5px;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -2539,6 +2556,10 @@ progress::-webkit-progress-value {
   padding-top: 8px;
 }
 
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -2645,6 +2666,10 @@ progress::-webkit-progress-value {
   line-height: 1.25;
 }
 
+.leading-snug {
+  line-height: 1.375;
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
@@ -2713,6 +2738,16 @@ progress::-webkit-progress-value {
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity, 1));
+}
+
+.text-yellow-700 {
+  --tw-text-opacity: 1;
+  color: rgb(161 98 7 / var(--tw-text-opacity, 1));
 }
 
 .underline {
